[gd_scene load_steps=27 format=2]

[ext_resource path="res://Scenes/Levels/Map2.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/UI/PlayerInv.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/UI/HotbarSlot.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/UI/TowerInv.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/Icons/skills.png" type="Texture" id=5]
[ext_resource path="res://Scenes/UI/TowerStatsPanel.tscn" type="PackedScene" id=6]
[ext_resource path="res://Resources/Fonts/ManaSpace_10.tres" type="DynamicFont" id=7]
[ext_resource path="res://Scenes/MainScenes/Grid.gd" type="Script" id=8]
[ext_resource path="res://Scenes/MainScenes/GameScene.gd" type="Script" id=9]
[ext_resource path="res://Scenes/MainScenes/UI.gd" type="Script" id=10]
[ext_resource path="res://Assets/Icons/play_new.png" type="Texture" id=11]
[ext_resource path="res://Assets/Icons/ff_new.png" type="Texture" id=12]
[ext_resource path="res://Resources/Tilesets/UI-elements-64x64.png" type="Texture" id=14]
[ext_resource path="res://Resources/Fonts/OldEng_40.tres" type="DynamicFont" id=16]
[ext_resource path="res://Scenes/UI/Tooltip.tscn" type="PackedScene" id=17]
[ext_resource path="res://Resources/Fonts/ManaSpace_16.tres" type="DynamicFont" id=18]
[ext_resource path="res://Resources/Fonts/ManaSpace_22.tres" type="DynamicFont" id=19]

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 14 )
region = Rect2( 258, 134, 60, 48 )

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 14 )
region = Rect2( 6, 262, 52, 52 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 14 )
region = Rect2( 326, 518, 52, 52 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 14 )
region = Rect2( 72, 584, 48, 48 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 14 )
region = Rect2( 778, 212, 44, 24 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 14 )
region = Rect2( 842, 212, 44, 24 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 14 )
region = Rect2( 778, 212, 44, 24 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 14 )
region = Rect2( 906, 212, 44, 24 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 14 )
region = Rect2( 264, 520, 48, 46 )

[node name="GameScene" type="Node2D"]
script = ExtResource( 9 )

[node name="Map1" parent="." instance=ExtResource( 1 )]

[node name="Grid" type="Node2D" parent="."]
script = ExtResource( 8 )

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource( 10 )

[node name="HUD" type="Control" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameControls" type="HBoxContainer" parent="UI/HUD"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -693.0
margin_top = -253.0
margin_right = -557.0
margin_bottom = -211.0
size_flags_horizontal = 4
size_flags_vertical = 4
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="UI/HUD/GameControls"]
margin_right = 66.0
margin_bottom = 42.0
size_flags_horizontal = 3
texture = SubResource( 12 )
patch_margin_left = 21
patch_margin_top = 21
patch_margin_right = 21
patch_margin_bottom = 21
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play" type="TextureButton" parent="UI/HUD/GameControls/NinePatchRect"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -8.0
margin_bottom = -5.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
size_flags_vertical = 4
toggle_mode = true
texture_normal = ExtResource( 11 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect2" type="NinePatchRect" parent="UI/HUD/GameControls"]
margin_left = 70.0
margin_right = 136.0
margin_bottom = 42.0
size_flags_horizontal = 3
texture = SubResource( 12 )
patch_margin_left = 21
patch_margin_top = 21
patch_margin_right = 21
patch_margin_bottom = 21
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fastforward" type="TextureButton" parent="UI/HUD/GameControls/NinePatchRect2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -5.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 12 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SkillsIcon" type="NinePatchRect" parent="UI/HUD"]
margin_left = 551.0
margin_top = 827.0
margin_right = 617.0
margin_bottom = 869.0
size_flags_horizontal = 3
texture = SubResource( 12 )
patch_margin_left = 21
patch_margin_top = 21
patch_margin_right = 21
patch_margin_bottom = 21
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Skills" type="TextureButton" parent="UI/HUD/SkillsIcon"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -8.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
size_flags_vertical = 4
toggle_mode = true
texture_normal = ExtResource( 5 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dashboard" type="NinePatchRect" parent="UI/HUD"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -425.0
margin_top = -213.0
margin_right = 425.0
texture = SubResource( 1 )
patch_margin_left = 21
patch_margin_top = 21
patch_margin_right = 21
patch_margin_bottom = 21
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Row" type="HBoxContainer" parent="UI/HUD/Dashboard"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = -16.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerPortrait" type="NinePatchRect" parent="UI/HUD/Dashboard/Row"]
margin_right = 150.0
margin_bottom = 181.0
rect_min_size = Vector2( 150, 150 )
rect_clip_content = true
size_flags_horizontal = 3
size_flags_vertical = 3
texture = SubResource( 2 )
patch_margin_left = 21
patch_margin_top = 21
patch_margin_right = 21
patch_margin_bottom = 21
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Hero" type="Control" parent="UI/HUD/Dashboard/Row/PlayerPortrait"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelIcon" type="NinePatchRect" parent="UI/HUD/Dashboard/Row/PlayerPortrait"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -45.0
margin_top = 3.0
margin_right = -3.0
margin_bottom = 45.0
size_flags_horizontal = 0
size_flags_vertical = 0
texture = SubResource( 13 )
patch_margin_left = 21
patch_margin_top = 21
patch_margin_right = 21
patch_margin_bottom = 21
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level" type="Label" parent="UI/HUD/Dashboard/Row/PlayerPortrait/LevelIcon"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = 5.0
size_flags_vertical = 1
custom_fonts/font = ExtResource( 18 )
text = "1"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Spacer" type="Control" parent="UI/HUD/Dashboard/Row"]
margin_left = 154.0
margin_right = 156.0
margin_bottom = 181.0
size_flags_horizontal = 3

[node name="Col" type="VBoxContainer" parent="UI/HUD/Dashboard/Row"]
margin_left = 160.0
margin_right = 584.0
margin_bottom = 181.0

[node name="Spacer3" type="Control" parent="UI/HUD/Dashboard/Row/Col"]
margin_right = 424.0
margin_bottom = 21.0
size_flags_vertical = 3

[node name="Hotbar" type="HBoxContainer" parent="UI/HUD/Dashboard/Row/Col"]
margin_top = 25.0
margin_right = 424.0
margin_bottom = 89.0
custom_constants/separation = 8
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Slot1" parent="UI/HUD/Dashboard/Row/Col/Hotbar" instance=ExtResource( 3 )]

[node name="Slot2" parent="UI/HUD/Dashboard/Row/Col/Hotbar" instance=ExtResource( 3 )]
margin_left = 72.0
margin_right = 136.0

[node name="Slot3" parent="UI/HUD/Dashboard/Row/Col/Hotbar" instance=ExtResource( 3 )]
margin_left = 144.0
margin_right = 208.0

[node name="Slot4" parent="UI/HUD/Dashboard/Row/Col/Hotbar" instance=ExtResource( 3 )]
margin_left = 216.0
margin_right = 280.0

[node name="Slot5" parent="UI/HUD/Dashboard/Row/Col/Hotbar" instance=ExtResource( 3 )]
margin_left = 288.0
margin_right = 352.0

[node name="Slot6" parent="UI/HUD/Dashboard/Row/Col/Hotbar" instance=ExtResource( 3 )]
margin_left = 360.0
margin_right = 424.0

[node name="Spacer4" type="Control" parent="UI/HUD/Dashboard/Row/Col"]
margin_top = 93.0
margin_right = 424.0
margin_bottom = 114.0
size_flags_vertical = 3

[node name="HealthBar" type="TextureProgress" parent="UI/HUD/Dashboard/Row/Col"]
margin_top = 118.0
margin_right = 424.0
margin_bottom = 139.0
size_flags_horizontal = 3
size_flags_vertical = 3
value = 75.0
texture_under = SubResource( 6 )
texture_progress = SubResource( 7 )
tint_progress = Color( 0.839216, 0.839216, 0.839216, 1 )
nine_patch_stretch = true
stretch_margin_left = 15
stretch_margin_top = 8
stretch_margin_right = 15
stretch_margin_bottom = 8

[node name="HPLabel" type="Label" parent="UI/HUD/Dashboard/Row/Col/HealthBar"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -27.5
margin_top = -8.0
margin_right = 27.5
margin_bottom = 8.0
custom_fonts/font = ExtResource( 18 )
text = "10/10"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExperienceBar" type="TextureProgress" parent="UI/HUD/Dashboard/Row/Col"]
margin_top = 143.0
margin_right = 424.0
margin_bottom = 151.0
value = 75.0
allow_greater = true
texture_under = SubResource( 8 )
texture_progress = SubResource( 9 )
tint_progress = Color( 0.478431, 0.176471, 0.964706, 1 )
nine_patch_stretch = true
stretch_margin_left = 15
stretch_margin_top = 8
stretch_margin_right = 15

[node name="EXPLabel" type="Label" parent="UI/HUD/Dashboard/Row/Col/ExperienceBar"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -22.5
margin_top = -7.0
margin_right = 22.5
margin_bottom = 7.0
custom_fonts/font = ExtResource( 7 )
text = "0/100"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Spacer5" type="Control" parent="UI/HUD/Dashboard/Row/Col"]
margin_top = 155.0
margin_right = 424.0
margin_bottom = 177.0
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="UI/HUD/Dashboard/Row/Col"]
margin_top = 181.0
margin_right = 424.0
margin_bottom = 181.0

[node name="Spacer2" type="Control" parent="UI/HUD/Dashboard/Row"]
margin_left = 588.0
margin_right = 590.0
margin_bottom = 181.0
size_flags_horizontal = 3

[node name="Inventory" parent="UI/HUD/Dashboard/Row" instance=ExtResource( 2 )]
margin_left = 594.0
margin_right = 818.0

[node name="TowerInv" parent="UI/HUD" instance=ExtResource( 4 )]
margin_left = 1385.0
margin_top = 869.0
margin_right = -235.0
margin_bottom = 2.0

[node name="TowerStatsPanel" parent="UI/HUD" instance=ExtResource( 6 )]
margin_left = 186.0
margin_top = 867.0
margin_right = -1384.0
margin_bottom = 0.0

[node name="WaveInfo" type="NinePatchRect" parent="UI/HUD"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -167.5
margin_top = 5.0
margin_right = 167.5
margin_bottom = 69.0
rect_min_size = Vector2( 256, 64 )
texture = SubResource( 11 )
patch_margin_left = 21
patch_margin_top = 21
patch_margin_right = 21
patch_margin_bottom = 21
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="UI/HUD/WaveInfo"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 15.0
margin_top = 12.0
margin_right = -15.0
margin_bottom = -6.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control2" type="Control" parent="UI/HUD/WaveInfo/HBoxContainer"]
margin_right = 5.0
margin_bottom = 46.0
size_flags_horizontal = 3

[node name="WaveNumberLabel" type="Label" parent="UI/HUD/WaveInfo/HBoxContainer"]
margin_left = 9.0
margin_top = 11.0
margin_right = 99.0
margin_bottom = 34.0
custom_fonts/font = ExtResource( 19 )
text = "Wave 0"

[node name="Control" type="Control" parent="UI/HUD/WaveInfo/HBoxContainer"]
margin_left = 103.0
margin_right = 108.0
margin_bottom = 46.0
size_flags_horizontal = 3

[node name="Control4" type="Control" parent="UI/HUD/WaveInfo/HBoxContainer"]
margin_left = 112.0
margin_right = 117.0
margin_bottom = 46.0
size_flags_horizontal = 3

[node name="Control5" type="Control" parent="UI/HUD/WaveInfo/HBoxContainer"]
margin_left = 121.0
margin_right = 126.0
margin_bottom = 46.0
size_flags_horizontal = 3

[node name="MobsLeftLabel" type="Label" parent="UI/HUD/WaveInfo/HBoxContainer"]
margin_left = 130.0
margin_top = 11.0
margin_right = 295.0
margin_bottom = 34.0
custom_fonts/font = ExtResource( 19 )
text = "Mobs left 0"

[node name="Control3" type="Control" parent="UI/HUD/WaveInfo/HBoxContainer"]
margin_left = 299.0
margin_right = 305.0
margin_bottom = 46.0
size_flags_horizontal = 3

[node name="Tooltip" parent="UI/HUD" instance=ExtResource( 17 )]
visible = false
margin_left = 234.0
margin_top = 951.0
margin_right = -1686.0
margin_bottom = -129.0

[node name="Label" type="Label" parent="UI"]
margin_top = 28.0
margin_right = 260.0
margin_bottom = 77.0
custom_fonts/font = ExtResource( 16 )
text = "Difficulty: "
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="UI/HUD/GameControls/NinePatchRect/Play" to="UI" method="_on_Play_pressed"]
[connection signal="pressed" from="UI/HUD/GameControls/NinePatchRect2/Fastforward" to="UI" method="_on_Fastforward_pressed"]
